-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 3.0.0-beta
-
Ubuntu 12.04 32bit, Qt5.2 and Qt Creator 3.0 from offline installer package
-
68142cd11a28af1724cdf20327f9a68f88befed8
Steps to reproduce:
- open Creator and create/open some projects
- invoke File -> Session Manager...
- hit 'Clone', give it a name and hit 'Switch to'
Current behavior:
- Creator does not automatically switch to this session (you'll stay on the Session Manager dialog)
- hitting there 'Switch to' works, but hitting 'Close' let's you stay on the old session
For Gerrit Dashboard: QTCREATORBUG-10701 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
70902,1 | Session: Make Switch to button work when cloning sessions | 3.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |