Session: Make Switch to button work when cloning sessions

Make Switch to button work in dialog shown when cloning sessions
in the session manager.

Task-number: QTCREATORBUG-10701
Change-Id: I6901a6cb842eabbfa38b25f3cc4925bec43c61a4
Reviewed-by: Christian Stenger <christian.stenger@digia.com>